WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42656
REGRESSION(
r62666
): Broke zoom in/out on EFL
https://bugs.webkit.org/show_bug.cgi?id=42656
Summary
REGRESSION(r62666): Broke zoom in/out on EFL
Lucas De Marchi
Reported
2010-07-20 12:14:56 PDT
REGRESSION(
r62666
): Broke zoom in/out on EFL
Attachments
Patch
(2.27 KB, patch)
2010-07-20 12:26 PDT
,
Lucas De Marchi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lucas De Marchi
Comment 1
2010-07-20 12:26:03 PDT
Created
attachment 62100
[details]
Patch
WebKit Commit Bot
Comment 2
2010-07-20 14:45:19 PDT
Comment on
attachment 62100
[details]
Patch Clearing flags on attachment: 62100 Committed
r63775
: <
http://trac.webkit.org/changeset/63775
>
WebKit Commit Bot
Comment 3
2010-07-20 14:45:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug